--- a/deployments-strategy/apps/users-db/Dockerfile
+++ b/deployments-strategy/apps/users-db/Dockerfile
@@ -1,4 +1,5 @@
-FROM registry.ocp4.example.com:8443/rhel8/mysql-80
+#FROM registry.ocp4.example.com:8443/rhel8/mysql-80
+FROM quay.io/fedora/mysql-80
 
 COPY import.sh users.sql /post-deploy
 
